<resources>
    <string name="app_name">MyContacts</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_name">Contact Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="contacts">Contacts</string>
    <string name="username_taken">That username is taken. Try another.</string>
    <string name="couldnt_create_your_account">Couldn\'t create your account, please try again.</string>
    <string name="account_succesfully_created">Account succesfully created.</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="please_fill_all_the_details">Please fill all the fields.</string>
    <string name="shouldnt_contain_spaces">The username and password shouldn\'t contain spaces.</string>
    <string name="username_and_password_should_be_at_least_6_charachters">Username and password should contain at least 6 charachters.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="yes_no_logout">Are you sure you want to logout?</string>
    <string name="somting_wrong_happend">Somting wrong happened! Please reconnect.</string>
    <string name="yes_no_delete_contact">Are you sure you want to delete this contact?</string>
    <string name="failed_to_delete_contact">Failed to delete contact. Please try again.</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="please_enter_contact_first_name">Please enter contact first name.</string>
    <string name="failed_to_update_contact">Failed to update the contact. Please try again.</string>
    <string name="failed_to_add_contact">Failed to add contact. Please try agian.</string>
    <string name="user_is_disconnected_please_reconncect">User is disconnected. please reconnect.</string>
    <string name="empty">" "</string>
</resources>