<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_contact_info_contact_name_tv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="25sp"
        android:textColor="?attr/colorSecondaryVariant"
        android:layout_margin="40dp"
        android:text="@string/contact_name"
        android:gravity="center_horizontal"/>

    <com.google.android.material.textview.MaterialTextView
        android:drawableStart="@drawable/ic_outline_phone_24"
        app:drawableTint="@color/gray"
        android:id="@+id/fragment_contact_info_phone_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:layout_margin="10dp"
        android:text="@string/phone"
        android:background="?attr/colorSecondaryVariant"
        android:gravity="center_vertical"/>

    <com.google.android.material.textview.MaterialTextView
        android:drawableStart="@drawable/outline_email_24"
        app:drawableTint="@color/gray"
        android:id="@+id/fragment_contact_info_email_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:background="?attr/colorSecondaryVariant"
        android:gravity="center_vertical"/>



        <com.google.android.material.textview.MaterialTextView
            android:drawableStart="@drawable/ic_outline_people_alt_24"
            app:drawableTint="@color/gray"
            android:id="@+id/fragment_contact_info_gender_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:layout_margin="10dp"
            android:text="@string/gender"
            android:background="?attr/colorSecondaryVariant"
            android:gravity="center_vertical"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_contact_info_back_btn"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:layout_marginTop="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"/>

</LinearLayout>