<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:text="@string/welcome"
            android:layout_gravity="center"
            android:textColor="?attr/colorOnSecondary"
            android:gravity="center"
            android:textSize="40sp"
            android:fontFamily="sans-serif-light"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_outline_account_circle_24"
            app:boxBackgroundColor="?attr/colorSecondaryVariant"
            app:boxStrokeColor="?attr/colorSecondary"
            app:hintTextColor="?attr/colorSecondary"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_login_username_et"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="?attr/colorSecondaryVariant"
            app:boxStrokeColor="?attr/colorSecondary"
            app:hintTextColor="?attr/colorSecondary"
            app:startIconDrawable="@drawable/outline_lock_24"
            app:endIconMode="password_toggle"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/fragment_login_password_et"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textAllCaps="false"
            android:id="@+id/fragment_login_login_btn"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:id="@+id/fragment_login_signup_btn"/>

    </LinearLayout>

</ScrollView>
