<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/username"
            app:boxBackgroundColor="?attr/colorSecondaryVariant"
            app:boxStrokeColor="?attr/colorSecondary"
            app:hintTextColor="?attr/colorSecondary"
            app:startIconDrawable="@drawable/ic_outline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_register_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:textColor="?attr/colorOnSecondary"
            app:boxBackgroundColor="?attr/colorSecondaryVariant"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="password_toggle"
            app:hintTextColor="?attr/colorSecondary"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_register_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/confirm_password"
            android:textColor="?attr/colorOnSecondary"
            app:boxBackgroundColor="?attr/colorSecondaryVariant"
            app:boxStrokeColor="?attr/colorSecondary"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="?attr/colorSecondary"
            app:hintTextColor="?attr/colorSecondary"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_register_confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_register_register_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/signup"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_register_back_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/back"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>